--- a/index.html
+++ b/index.html
@@ -61,9 +61,47 @@
   <body id="page-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">BlueWallet</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+          <?xml version="1.0" encoding="UTF-8"?>
+          <svg width="136px" height="78px" viewBox="0 0 136 78" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <!-- Generator: Sketch 51 (57462) - http://www.bohemiancoding.com/sketch -->
+              <title>Bluewallet - bitcoin wallet</title>
+              <defs>
+                  <linearGradient x1="50%" y1="2.83824061%" x2="50%" y2="100%" id="linearGradient-1">
+                      <stop stop-color="#174697" offset="0%"></stop>
+                      <stop stop-color="#0C2550" offset="100%"></stop>
+                  </linearGradient>
+                  <linearGradient x1="50%" y1="0%" x2="50%" y2="97.8843027%" id="linearGradient-2">
+                      <stop stop-color="#3F78DC" offset="0%"></stop>
+                      <stop stop-color="#2F5FB3" offset="100%"></stop>
+                  </linearGradient>
+                  <linearGradient x1="50%" y1="2.72534321%" x2="50%" y2="100%" id="linearGradient-3">
+                      <stop stop-color="#8BD7F9" offset="0%"></stop>
+                      <stop stop-color="#68BBE1" offset="100%"></stop>
+                  </linearGradient>
+              </defs>
+              <g id="site" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                  <g id="Desktop-HD" transform="translate(-158.000000, -48.000000)">
+                      <rect fill="#FFFFFF" x="0" y="0" width="1440" height="3528"></rect>
+                      <g id="Group-2" transform="translate(158.000000, 48.000000)">
+                          <g id="Group">
+                              <rect id="Rectangle-Copy" fill="url(#linearGradient-1)" x="0" y="0" width="77" height="77" rx="17"></rect>
+                              <rect id="Rectangle-Copy-2" fill="url(#linearGradient-2)" x="0" y="18" width="77" height="58" rx="17"></rect>
+                              <rect id="Rectangle-Copy-3" fill="url(#linearGradient-3)" x="0" y="37" width="77" height="41" rx="17"></rect>
+                              <text id="blue-copy" font-family="Calibri-Bold, Calibri" font-size="20" font-weight="bold" letter-spacing="-0.08613446" fill="#FFFFFF">
+                                  <tspan x="31.9496127" y="65">blue</tspan>
+                              </text>
+                          </g>
+                          <text id="wallet" font-family="Calibri-Bold, Calibri" font-size="20" font-weight="bold" letter-spacing="-0.08613446" fill="#0C2550">
+                              <tspan x="85.1334034" y="65">wallet</tspan>
+                          </text>
+                      </g>
+                  </g>
+              </g>
+          </svg>
+        </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -89,28 +127,18 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-5">BlueWallet is a new opensource Bitcoin wallet designed for iOS.</h1>
-
-              <a class="badge-link2"  href="https://itunes.apple.com/us/app/bluewallet-bitcoin-wallet/id1376878040?l=ru&ls=1&mt=8" target="_blank"><img  style="height: 50px;" src="img/app-store-badge.svg" alt=""></a>
+              <h2>A <strong>Bitcoin wallet</strong> for iOS </h2>
+               <h1 class="mb-5">Easy to use <span class="light-blue">and secure</span></h1>
+              <a class="badge-link2"  href="https://itunes.apple.com/us/app/bluewallet-bitcoin-wallet/id1376878040?l=ru&ls=1&mt=8" target="_blank">
+                <img src="img/app-store-badge.svg" alt="app-store-badge"></a>
               <a href="#features" class="btn btn-outline btn-xl js-scroll-trigger">Learn More</a>
             </div>
 
           </div>
 
-          <div class="col-lg-5 my-auto">
+          <div class="col-lg-5">
             <div class="device-container">
-              <div class="device-mockup iphone6_plus portrait white">
-                <div class="device">
-                  <div class="screen">
-                    <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                      <iframe style="margin-left: 3px;margin-top: 1px;" src="https://appetize.io/embed/gdh1d4wgp6p7txwf6brhjeyt54?device=iphone8&amp;scale=75&amp;orientation=portrait&amp;osVersion=11.3&amp;deviceColor=white&amp;screenOnly=true" width="378px" height="800px" frameborder="0" scrolling="no"></iframe>
-                  </div>
-                </div>
-
-              </div>
-                <a style="margin-left: 25%; text-decoration: none;" href="https://appetize.io/embed/gdh1d4wgp6p7txwf6brhjeyt54?device=iphone8&scale=100&orientation=portrait&osVersion=11.3&deviceColor=white" target="_blank">Open in new window</a>
-            </div>
-          </div>
+              <div class="bluebig"><img src="/img/bluewallet-big.png"></div>
         </div>
       </div>
     </header>
