features section revamped

--- a/index.html
+++ b/index.html
@@ -131,7 +131,6 @@
                <h1 class="mb-5">Easy to use <span class="light-blue">and secure</span></h1>
               <a class="badge-link2"  href="https://itunes.apple.com/us/app/bluewallet-bitcoin-wallet/id1376878040?l=ru&ls=1&mt=8" target="_blank">
                 <img src="img/app-store-badge.svg" alt="app-store-badge"></a>
-              <a href="#features" class="btn btn-outline btn-xl js-scroll-trigger">Learn More</a>
             </div>
 
           </div>
@@ -151,117 +150,81 @@
     <section class="features" id="features">
         <div class="container">
             <div class="section-heading text-center">
-                <h2>Features</h2>
+                <h2><strong>Security</strong> by design</h2>
                 <p class="text-muted"></p>
-                <hr>
             </div>
-            <div class="row">
-                <div class="col-lg-4 my-auto">
-                    <div class="device-container">
-                        <div class="device-mockup iphone6_plus portrait white">
-                            <div class="device">
-                                <div class="screen">
-                                    <img src="img/demo-screen-1.png" class="img-fluid" alt="">
-                                </div>
-                                <div class="button">
-
-                                </div>
-                            </div>
-                        </div>
+            <div class="col-lg-12 my-auto">
+              <div class="row">
+                <div class="col-lg-3">
+                    <div class="feature-item">
+                        <i class="fa fa-github"></i>
+                        <h3>Open Source </h3>
+                        <p>MIT licensed, you can build it and run it on your own! Made with ReactNative</p>
                     </div>
                 </div>
-                <div class="col-lg-8 my-auto">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="feature-item">
-                                    <i class="fa fa-github"></i>
-                                    <h3>Open Source </h3>
-                                    <p class="text-muted">Since this app is MIT licensed, you can build it and run it on your own! Made with ReactNative</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="feature-item">
-                                    <i class="icon-home text-primary"></i>
-                                    <h3>Be in control</h3>
-                                    <p class="text-muted">Private keys never leave your device</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="feature-item">
-                                    <i class="icon-key text-primary"></i>
-                                    <h3>Full encryption</h3>
-                                    <p class="text-muted">On top of iOS multi-layer encryption, Blue Wallet encrypts everyting with additional user password. And yes, biometric security is not reliable</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="feature-item">
-                                    <i class="icon-target text-primary"></i>
-                                    <h3>Plausible deniability</h3>
-                                    <p class="text-muted">Fake password which decrypts fake wallets. For special cases when you are forced to disclose your access</p>
-                                </div>
-                            </div>
-                        </div>
+                <div class="col-lg-3">
+                    <div class="feature-item">
+                        <i class="icon-target text-primary"></i>
+                        <h3>Plausible deniability</h3>
+                        <p>Password which decrypts fake wallets. If you are forced to disclose your access</p>
                     </div>
                 </div>
+                <div class="col-lg-3">
+                    <div class="feature-item">
+                        <i class="icon-key text-primary"></i>
+                        <h3>Full encryption</h3>
+                        <p>On top of iOS multi-layer encryption, we encrypt everyting with additional password</p>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="feature-item">
+                        <i class="icon-wrench text-primary"></i>
+                        <h3>SegWit</h3>
+                        <p>SegWit supported<br />(in P2SH-compatibility mode)</p>
+                    </div>
+                </div>
+             </div>
             </div>
-
-            <div class="row">
-                <div class="col-lg-4 my-auto">
-                    <div class="device-container">
-                        <div class="device-mockup iphone6_plus portrait white">
-                            <div class="device">
-                                <div class="screen">
-                                    <img src="img/demo-screen-2.png" class="img-fluid" alt="">
-                                </div>
-                                <div class="button">
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+          </div>
+        <div class="fwhite">
+          <div class="container">
+                <div class="section-heading text-center">
+                <h2>Focused on <strong>your experience</strong></h2>
+                <p class="text-muted"></p>
                 </div>
-                <div class="col-lg-8 my-auto">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="feature-item">
-                                    <i class="icon-calculator text-primary"></i>
-                                    <h3>Flexible fees</h3>
-                                    <p class="text-muted">Starting from 1 Satoshi</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="feature-item">
-                                    <i class="icon-rocket text-primary"></i>
-                                    <h3>Replace-By-Fee (RBF)</h3>
-                                    <p class="text-muted">Speed-up your transactions by increasing the fee (BIP125). You can also change destination address for non-confirmed tx</p>
-                                </div>
-                            </div>
+                  <div class="col-lg-12 my-auto">
+                    <div class="row">
+                      <div class="col-lg-3">
+                        <div class="feature-item">
+                            <i class="icon-home text-primary"></i>
+                            <h3>Be in control</h3>
+                            <p>Private keys never leave your device.  You control your private keys</p>
                         </div>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="feature-item">
-                                    <i class="icon-wrench text-primary"></i>
-                                    <h3>SegWit</h3>
-                                    <p class="text-muted">SegWit supported (in P2SH-compatibility mode)</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="feature-item">
-                                    <i class="icon-envelope-open text-primary"></i>
-                                    <h3>Export TXHEX</h3>
-                                    <p class="text-muted">Get transaction's TXHEX without broadcasting it and broadcast with relay of your choice</p>
-                                </div>
-                            </div>
-                        </div>
+                      </div>
+                      <div class="col-lg-3">
+                          <div class="feature-item">
+                              <i class="icon-calculator text-primary"></i>
+                              <h3>Flexible fees</h3>
+                              <p>Starting from 1 Satoshi. <br />Defined by you the user</p>
+                          </div>
+                      </div>
+                      <div class="col-lg-3">
+                          <div class="feature-item">
+                              <i class="icon-rocket text-primary"></i>
+                              <h3>Replace-By-Fee</h3>
+                              <p>(RBF) Speed-up your transactions by increasing the fee (BIP125).</p>
+                          </div>
+                      </div>
+                      <div class="col-lg-3">
+                          <div class="feature-item">
+                              <i class="icon-envelope-open text-primary"></i>
+                              <h3>Export TXHEX</h3>
+                              <p>Get transaction's TXHEX without broadcasting it, do it with relay of your choice</p>
+                          </div>
+                      </div>
                     </div>
+                  </div>
                 </div>
-            </div>
-
-        </div>
     </section>
 
     <section class="download bg-primary text-center" id="download">
