--- a/index.html
+++ b/index.html
@@ -227,15 +227,15 @@
                 </div>
     </section>
 
-    <section class="download bg-primary text-center" id="download">
+    <section class="download text-center" id="download">
       <div class="container">
         <div class="row">
-          <div class="col-md-8 mx-auto">
-            <h2 class="section-heading">Download from Apple Appstore</h2>
+          <div class="col-md-12 mx-auto">
+            <h2 class="section-heading">Made by <strong>iOS users</strong> download it now</h2>
             <!-- <p>Our app is available on any mobile device! Download now to get started!</p> -->
             <div class="badges">
               <!--<a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>-->
-              <a class="badge-link" href="https://itunes.apple.com/us/app/bluewallet-bitcoin-wallet/id1376878040?l=ru&ls=1&mt=8" target="_blank"><img src="img/app-store-badge.svg" alt=""></a>
+              <a class="badge-link" href="https://itunes.apple.com/us/app/bluewallet-bitcoin-wallet/id1376878040?l=ru&ls=1&mt=8" target="_blank"><img src="img/app-store-badge-dark.svg" alt=""></a>
             </div>
           </div>
         </div>
