--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 mx-auto">
-            <h2 class="section-heading">Made by <strong>iOS users</strong> download it now</h2>
+            <h2 class="section-heading">Crafted for <strong>iOS</strong> and <strong>Bitcoin users</strong></h2>
             <!-- <p>Our app is available on any mobile device! Download now to get started!</p> -->
             <div class="badges">
               <!--<a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>-->
@@ -283,9 +283,9 @@
         <div class="row">
           <div class="col-lg-12 reach">
             <h3>Contact us</h3>
-            <div> <a href="mailto:bluewallet@bluewallet.io"><img src="img/reach.png"></a></div>
+            <div> <a href="mailto:bluewallet@bluewallet.io">bluewallet at bluewallet.io</a></div>
             <p>
-              <a href="https://github.com/Overtorment/BlueWallet" target="_blank">github</a> / <a href="https://www.reddit.com/r/bluewallet/" target="_blank">reddit</a> / <a href="https://twitter.com/bluewalletio" target="_blank">twitter</a></p>
+              <a href="https://github.com/Overtorment/BlueWallet" target="_blank"><i class="fa fa-github"></i> github</a> / <a href="https://www.reddit.com/r/bluewallet/" target="_blank"><i class="fa fa-reddit"></i> reddit</a> / <a href="https://twitter.com/bluewalletio" target="_blank"><i class="fa fa-twitter"></i> twitter</a></p>
           </div>
         </div>
 
