--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         <div class="row">
           <div class="col-lg-12 reach">
             <h3>Contact us</h3>
-            <div> <a href="mailto:bluewallet@bluewallet.io">bluewallet at bluewallet.io</a></div>
+            <div> <a href="mailto:bluewallet@bluewallet.io">bluewallet@bluewallet.io</a></div>
             <p>
               <a href="https://github.com/Overtorment/BlueWallet" target="_blank"><i class="fa fa-github"></i> github</a> / <a href="https://www.reddit.com/r/bluewallet/" target="_blank"><i class="fa fa-reddit"></i> reddit</a> / <a href="https://twitter.com/bluewalletio" target="_blank"><i class="fa fa-twitter"></i> twitter</a></p>
           </div>
