--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           <div class="col-lg-4 people">
             <img src="img/volodymyr.png">
             <h3>Volodymyr Mishyn</h3>
-            <p>London</p>
+            <p>Puerto Plata</p>
             <p>Strategy</p>
           </div>
         </div>
