grammar and name corrections

--- a/index.html
+++ b/index.html
@@ -166,21 +166,21 @@
                     <div class="feature-item">
                         <i class="icon-target text-primary"></i>
                         <h3>Plausible deniability</h3>
-                        <p>Password which decrypts fake wallets. If you are forced to disclose your access</p>
+                        <p>Password which decrypts fake wallets if you are forced to disclose your access</p>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="feature-item">
                         <i class="icon-key text-primary"></i>
                         <h3>Full encryption</h3>
-                        <p>On top of iOS multi-layer encryption, we encrypt everyting with additional password</p>
+                        <p>On top of iOS multi-layer encryption, we encrypt everyting with added passwords</p>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="feature-item">
                         <i class="icon-wrench text-primary"></i>
                         <h3>SegWit</h3>
-                        <p>SegWit supported<br />(in P2SH-compatibility mode)</p>
+                        <p>SegWit supported<br />in P2SH-compatibility mode</p>
                     </div>
                 </div>
              </div>
@@ -205,14 +205,14 @@
                           <div class="feature-item">
                               <i class="icon-calculator text-primary"></i>
                               <h3>Flexible fees</h3>
-                              <p>Starting from 1 Satoshi. <br />Defined by you the user</p>
+                              <p>Starting from 1 Satoshi. <br />Defined by you, the user</p>
                           </div>
                       </div>
                       <div class="col-lg-3">
                           <div class="feature-item">
                               <i class="icon-rocket text-primary"></i>
                               <h3>Replace-By-Fee</h3>
-                              <p>(RBF) Speed-up your transactions by increasing the fee (BIP125).</p>
+                              <p>(RBF) Speed-up your transactions by increasing the fee (BIP125)</p>
                           </div>
                       </div>
                       <div class="col-lg-3">
@@ -257,7 +257,7 @@
     <section class="contact" id="contact">
       <div class="container">
         <h2>About</h2>
-        <p>We are <strong>Bitcoin</strong> enthusiasts focus on bringing the revolution to the people. 🔥<br />Reach out, we will appreciate your feedback.</p>
+        <p>We are <strong>Bitcoin</strong> enthusiasts focused on bringing the revolution to the people. 🔥<br />Reach out, we will appreciate your feedback.</p>
         
         <div class="row">
           <div class="col-lg-4 people">
@@ -274,7 +274,7 @@
           </div>
           <div class="col-lg-4 people">
             <img src="img/volodymyr.png">
-            <h3>Volodymyr Mishyn</h3>
+            <h3>Vladimir Mishin</h3>
             <p>Puerto Plata</p>
             <p>Strategy</p>
           </div>
